# caliby

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  HOLE_PUNCHING_TESTS.md  LICENSE  README.md  amdahl-project.txt  analyze_vectors.py  build_with_symbols.sh  do_rebuild.sh  out.folded  out.perf-folded  output.txt  pyproject.toml  pytest.ini  rebuild.sh  release.sh  run_tests.sh  sea-agent-0.1.0.vsix  setup.py  tall -e .  test_catalog.py  test_connectivity.py  test_debug_index4.py  test_detailed_debug.py  test_index_id_simple.py  test_index_info.py  test_multi_index_bug.py  test_output.txt  test_simple_concurrency.py  test_single_index_isolated.py  test_single_thread.py  test_single_thread_multi_index.py  test_threads.py  test_tradhash.py
.amdahl/: llm_interactions.json  strategy_store.json
.amdahl/generated_code/: build_project.py  extract_metrics.py  optimization_log.txt  project_context.json  run_benchmark.py  run_profiling.py  run_tests.py
.amdahl/generated_code_20251225_235246/: build_project.py  extract_metrics.py  optimization_log.txt  run_benchmark.py  run_profiling.py  run_tests.py
benchmark/: README.md  compare_diskann.py  compare_diskann_mem.py  compare_hnsw.py  compare_hnsw_oom.py  compare_ivfpq_faiss.py  compare_ivfpq_faiss_oom.py  compare_vectordb.py  requirements.txt
docs/: CATALOG_DESIGN.md  COLLECTION_API.md  COLLECTION_DESIGN.md  CONTRIBUTING_TODO.md  DEVELOPER_GUIDE.md  MULTI_INDEX_TESTS.md  USAGE.md  initialization.md
examples/: agentic_memory_store.py  benchmark.py  benchmark_large_scale.py  benchmark_multi_index.py  diskann_example.py  hnsw_example.py  image_similarity_search.py  initialization_example.py  named_index_example.py  rag_pipeline.py  recommendation_system.py  semantic_search.py  simplified_api_example.py  test_recovery.py
include/caliby/: aligned_allocator.hpp  btree_index.hpp  calico.hpp  catalog.hpp  collection.hpp  diskann.hpp  distance.hpp  distance_diskann.hpp  hash_tables.hpp  hnsw.hpp  ivfpq.hpp  logging.hpp  perf_util.hpp  simd_utils.hpp  text_index.hpp  utils.hpp
include/caliby/tpcc/: RandomGenerator.hpp  Types.hpp  ZipfianGenerator.hpp
src/: bindings.cpp  btree_index.cpp  calico.cpp  catalog.cpp  collection.cpp  diskann.cpp  distance_diskann.cpp  hnsw.cpp  ivfpq.cpp  text_index.cpp
tests/: __init__.py  conftest.py  hole_punching_analysis.py  test_all_distance_metrics.py  test_bm25_comparison.py  test_catalog.py  test_collection.py  test_collection_advanced.py  test_composite_metadata_index.py  test_crash_recovery_persistence.py  test_diskann.py  test_distance.py  test_force_eviction.py  test_hnsw.py  test_hole_punching.py  test_hole_punching_direct.py  test_hole_punching_validation.py  test_index_persistence.py  test_initialization.py  test_integration.py  test_ivfpq.py  test_ivfpq_extensive.py  test_multi_index.py  test_multi_index_direct.py  test_recovery.py  test_usage_docs.py
